--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/mattdaisley/waveform-data-test/issues"
   },
-  "homepage": "https://github.com/mattdaisley/waveform-data-test#readme"
+  "homepage": "https://github.com/mattdaisley/waveform-data-test#readme",
+  "dependencies": {
+    "waveform-data": "^3.1.0"
+  }
 }
